vlib/v/checker/tests/voidptr_dereference_err.vv
fn main() {
	mut a := unsafe { voidptr(u64(0)) }
	mut b := 123
	a = &b
	println(*a)
}
